@@ -1,3 +1,7 @@
+2018-02-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* dsolve() function for differential equations
+
 2018-01-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Support negative exponents and k > n in binomial function
